<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:padding="5dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ed_register_nama"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edttxt"
        android:hint="@string/nama"
        android:drawableLeft="@drawable/baseline_person_24"
        android:padding="5dp"/>
    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edttxt"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:drawableLeft="@drawable/baseline_email_24"
        android:inputType="textEmailAddress"
        android:padding="5dp"/>

    <com.example.intermediet1.CustomView.MyEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/custom_edttxt"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:padding="5dp"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:text="@string/register"/>

</LinearLayout>